<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_num1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20sp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginBottom="20sp"
        android:hint="@string/edit_text1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/edit_text2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFF"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_plus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginStart="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginEnd="80sp"
            android:layout_marginRight="80sp"
            android:background="#999999"
            android:text="@string/add"
            android:textSize="40sp" />

        <Button
            android:id="@+id/but_minus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginStart="30sp"
            android:layout_marginLeft="30sp"
            android:background="#999999"
            android:text="@string/sub"
            android:textSize="40sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFF"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_multiply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="80sp"
            android:layout_marginRight="80sp"
            android:background="#999999"
            android:text="@string/mult"
            android:textSize="40sp" />

        <Button
            android:id="@+id/but_divide"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="40sp"
            android:layout_marginStart="30sp"
            android:layout_marginLeft="30sp"
            android:background="#999999"
            android:text="@string/divide"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF44F"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140sp"
            android:layout_marginLeft="140sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:background="#999999"
            android:text="@string/clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2E4E6"
        android:gravity="center">

        <TextView
            android:id="@+id/Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/answer"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="#333333">

        <TextView
            android:id="@+id/Answer_View"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_marginTop="5sp"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>